ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-red-green-blue
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/enable-underscores-in-headers: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: red
            port: 
              number: 8081
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green
            port: 
              number: 8082
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue
            port: 
              number: 8083
